# rnencodec-onehot

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-conda.txt  requirements.txt
data/trumpet-class/: trumpet-class.ipynb
data/trumpet-class/normalized/: 237-4.csv  315-1.csv  337-4.csv  375-2.csv  395-4.csv  442-1.csv
data/trumpet-class/raw/: 269-2.csv  280-3.csv  299-3.csv  355-2.csv  418-5.csv  parameters.json
data/trumpet-class/tokens/: 234-1.ecdc  236-3.cond.npy  237-4.ecdc  255-2.ecdc  255-4.ecdc  257-1.ecdc  257-3.ecdc  267-3.ecdc  268-1.cond.npy  269-2.ecdc  279-4.cond.npy  279-4.ecdc  280-1.ecdc  (+29 more)
dev_notebooks/: V3_InferenceEncodec.ipynb  V3_PlayEcdcFile.ipynb  V3_TestDataset.ipynb  V3_ecdcThruRNN.ipynb  V4_EncodecStreamRNN.ipynb  V5_RNNDataSynth.ipynb  syntex4kad.ipynb
dev_notebooks/dev/: README.md
quickstart/: 1_dataset.ipynb  2_train.ipynb  3_inference.ipynb
quickstart/output_26.02.28.18.08/: conditioning_config.pt  config_v2.json  config_v2.pt
quickstart/output_26.03.11.17.50/: config_v2.json
quickstart/output_Film_26.03.12.11.16/: config_v2.json  config_v2.pt
quickstart/output_classFilm_26.03.12.11.16/: config_v2.json  config_v2.pt
quickstart/output_class_26.03.12.11.16/: conditioning_config.json  conditioning_config.pt  config_v2.pt
quickstart_class/: 1_dataset.ipynb  2_train.ipynb  3_inference.ipynb
rnencodec/model/: gru_audio_model.py
scripts/: a_export_rnn_step.py  b_sanity_check.py  c_export_encodec_decoder.py  d_sanity_decoder.py  download_artifacts.py  exportmodel4inference.py
training/: loop.py
(+160 files in other folders)
