[project]
name = "rnencodec"
version = "0.0.1"
description = "RNN + Encodec inference/training"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["rnencodec*"] } }
